house-finance/house/house-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: house-finances
  namespace: house
spec:
  replicas: 2
  selector:
    matchLabels:
      app: house-finances
  template:
    metadata:
      labels:
        app: house-finances
    spec:
      nodeName: fpg-worker
      containers:
        - name: house-finances
          image: tobygaskell/house-finances:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8501
