house-finance/house/ingress-config-house.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: house-ingress
  namespace: house
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
  - hosts:
    - "house-finance.fpg-app.com"
    secretName: "house-ingress"
  ingressClassName: nginx
  rules:
  - host: house-finance.fpg-app.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: house-service
            port:
              number: 80
